--- a/code/0hn0/DesktopGame/build.gradle
+++ b/code/0hn0/DesktopGame/build.gradle
@@ -9,4 +9,6 @@ java {
 
 dependencies {
     implementation project(path: ':GameLogic')
+    implementation project(path: ':Engine')
+    implementation project(path: ':DesktopEngine')
 }
